--- a/README
+++ b/README
@@ -1,20 +1,13 @@
 # QiTHRon
-```
 mee home setup for ywu
-```
 
-
-# SOFTWARE'S
-```
+# SOFTWARE
 DISTRO     Gentoo Linux (amd64 openrc)
 WM         bspwm
 SHELL      dash (user login), zsh (interactive)
 TERMINAL   st
 EDITOR     neovim
-```
-
+A/V PLAYER mpv
 
 # LICENSE
-```
-Keep secrets encrypted and offline in disk, it's MIT baby <3.
-```
+keep secrets encrypted and offline in disk, it's CC0 <3
